--- a/AirportExplorer.csproj
+++ b/AirportExplorer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <UserSecretsId>Super-Secret-ID</UserSecretsId>
+    <UserSecretsId>ad25d8b4-b46c-4322-b0b8-c532f7a87f50</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="6.1.0" />
